--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django>=5.1,<6.0
 numpy>=2.3.5
-pandas>=2.3.3
+pandas>=3.0.0
 python-dotenv>=1.0
+fiona>=1.10.1
+shapely>=2.1.2
+bokeh >=3.8.2
+geopandas >=1.1.2
